# assert-no-inline-directives

./: README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/assert_no_inline_directives/: cli.py  scanner.py
src/assert_no_inline_lint_disables/: cli.py  scanner.py
test/e2e/: conftest.py  test_e2e.py  test_e2e_clang.py  test_e2e_markdown.py
test/integration/: test_cli.py  test_cli_markdown.py  test_main.py  test_scanner.py
test/unit/: test_cli.py  test_main_module.py  test_scanner.py  test_scanner_markdown.py
